--- a/css/global.css
+++ b/css/global.css
@@ -17,10 +17,10 @@ body {
 
 .login-card {
     margin: 0 auto;
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     border: 1px solid rosybrown;
-    background-color:white;
+    background-image: linear-gradient(45deg, rgb(0, 140, 255), rgb(221, 86, 109) );
     padding: 25px;    
 }
 
@@ -45,5 +45,64 @@ body {
     border-radius: 7px;
     color: white;
     height: 30px;
+}
 
+.register-button {
+    width: 100%;
+    margin-top: 30px;
+    background-color:blueviolet;
+    border-radius: 7px;
+    color: white;
+    height: 30px;
+}
+
+
+#register-container {
+    width: 100%;
+    padding-top: 100px;
+}
+
+.login-form {
+    margin: 0 auto;
+    width: 400px;
+    height: 400px;
+    border: 1px solid rosybrown;
+    background-image: linear-gradient(45deg, purple, pink);
+    padding: 30px;
+
+}
+
+.finish-button {
+    width: 100%;
+    margin-top: 10px;
+    background-color:rgb(226, 197, 101);
+    border-radius: 7px;
+    color: black;
+    height: 30px;
+}
+
+#finish-container {
+    width: 100%;
+    padding-top: 100px;
+}
+
+.back-form {
+    margin: 0 auto;
+    width: 400px;
+    height: 400px;
+    border: 1px solid rosybrown;
+    /* background-image: linear-gradient(45deg, rgb(255, 174, 0), rgb(85, 160, 66)); */
+    background-image: url("../assets/dog.jpg");
+    padding: 30px;
+
+}    
+
+
+.back-button {
+    width: 100%;
+    margin-top: 10px;
+    background-color:rgb(101, 226, 138);
+    border-radius: 7px;
+    color: black;
+    height: 30px;
 }
